[package]
name = "megalopa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
http-bytes = "0.1.0"
httparse = "1.8.0"
markdown = "1.0.0-alpha.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
slug = "0.1.5"
tera = "1.19.1"
