[package]
name = "megalopa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
http-bytes = "0.1.0"
httparse = "1.8.0"
notify = "6.1.1"
regex = "1.10.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
slug = "0.1.5"
tera = "1.19.1"
tungstenite = "0.21.0"
